# slingshot

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: cancel.rs  cancellation.rs  fd.rs  future.rs  lib.rs  task.rs
src/bsd/: mod.rs  tcp.rs  time.rs
src/linux/: mod.rs  signal.rs  tcp.rs  time.rs
src/windows/: handle.rs  mem.rs  mod.rs  overlapped.rs  socket.rs  tcp.rs  time.rs
tests/: epoll_cancel.rs  epoll_signal.rs  epoll_tcp.rs  iocp_cancel.rs  iocp_tcp.rs  kqueue_cancel.rs  kqueue_tcp.rs
